# openapi-watchit.yaml
@@ -179,7 +179,34 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/NowPlayingMovieDTO'
+                $ref: '#/components/schemas/HomePageMovieDTO'
+        '400':
+          $ref: '#/components/responses/ValidationError'
+        '500':
+          $ref: '#/components/responses/TMDBServerError'
+  /api/v1/movies/upcoming:
+    get:
+      summary: Get Upcoming Movies
+      parameters:
+        - in: query
+          name: region
+          required: true
+          schema:
+            type: string
+          description: The region code
+        - in: query
+          name: language
+          required: true
+          schema:
+            type: string
+          description: The language code
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HomePageMovieDTO'
         '400':
           $ref: '#/components/responses/ValidationError'
         '500':
@@ -390,7 +417,7 @@ components:
                 example: [ "Netflix", "Amazon Prime" ]
 
 
-    NowPlayingMovieDTO:
+    HomePageMovieDTO:
       type: object
       properties:
         status:
