# src/domain/dtos/index.ts
@@ -1,8 +1,8 @@
 import MovieDTO from './movies/MovieDTO.js';
-import NowPlayingMovieDTO from './movies/NowPlayingMovieDTO.js';
+import HomePageMovieDTO from './movies/HomePageMovieDTO.js';
 import UserDTO from './users/UserDTO.js';
 import RegisterUserDTO from './auth/RegisterUserDTO.js';
 import SigninUserDTO from './auth/SigninUserDTO.js';
 import SigninUserResponseDTO from './auth/SigninUserResponseDTO.js';
 
-export { MovieDTO, NowPlayingMovieDTO, UserDTO, RegisterUserDTO, SigninUserDTO, SigninUserResponseDTO };
+export { MovieDTO, HomePageMovieDTO, UserDTO, RegisterUserDTO, SigninUserDTO, SigninUserResponseDTO };
