# src/infrastructure/tmdb/repositories/MovieRepositoryImpl.ts
@@ -36,6 +36,19 @@ class MovieRepositoryImpl implements MovieRepositoryInterface {
     // @ts-ignore: Results exist in TMDB
     return response.data?.results;
   }
+
+  async getUpcomingMovies(region: string, language: string): Promise<any> {
+    const response = await axiosInstance.get('/movie/upcoming', {
+      params: {
+        language,
+        region,
+        page: 1,
+      },
+    });
+
+    // @ts-ignore: Results exist in TMDB
+    return response.data?.results;
+  }
 }
 
 export default MovieRepositoryImpl;
