# src/interface/controllers/MovieController.ts
@@ -1,13 +1,20 @@
 import { Request, Response, NextFunction } from 'express';
 import { inject } from 'inversify';
 import { TYPES } from '../../config/types.js';
-import { GetMovieDetailsUseCase, GetNowPlayingMoviesUseCase } from '../../application/use-cases/index.js';
-import { MovieDTO, NowPlayingMovieDTO } from '../../domain/dtos/index.js';
+// UseCases
+import {
+  GetMovieDetailsUseCase,
+  GetNowPlayingMoviesUseCase,
+  GetUpcomingMoviesUseCase,
+} from '../../application/use-cases/index.js';
+// DTOs
+import { MovieDTO, HomePageMovieDTO } from '../../domain/dtos/index.js';
 
 class MovieController {
   constructor(
     @inject(TYPES.GetMovieDetailsUseCase) private getMovieDetailsUseCase: GetMovieDetailsUseCase,
     @inject(TYPES.GetNowPlayingMoviesUseCase) private getNowPlayingMoviesUseCase: GetNowPlayingMoviesUseCase,
+    @inject(TYPES.GetUpcomingMoviesUseCase) private getUpcomingMoviesUseCase: GetUpcomingMoviesUseCase,
   ) {}
 
   async getMovieDetails(req: Request, res: Response, next: NextFunction) {
@@ -30,11 +37,28 @@ class MovieController {
       const region = req.query.region as string;
       const language = req.query.language as string;
 
-      const movies: NowPlayingMovieDTO[] = await this.getNowPlayingMoviesUseCase.execute(region, language);
+      const movies: HomePageMovieDTO[] = await this.getNowPlayingMoviesUseCase.execute(region, language);
 
       return res.status(200).json({
         status: 'success',
         message: 'Now Playing Movies retrieved successfully',
+        movies,
+      });
+    } catch (error: any) {
+      next(error);
+    }
+  }
+
+  async getUpcomingMovies(req: Request, res: Response, next: NextFunction) {
+    try {
+      const region = req.query.region as string;
+      const language = req.query.language as string;
+
+      const movies: HomePageMovieDTO[] = await this.getUpcomingMoviesUseCase.execute(region, language);
+
+      return res.status(200).json({
+        status: 'success',
+        message: 'Upcoming Movies retrieved successfully',
         movies,
       });
     } catch (error: any) {
